force-app/main/default/objects/Tractor__c/Tractor__c.object-meta.xml
<CustomObject>
    <label>Tractor</label>
    <nameField>
        <label>Tractor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>