force-app/main/default/objects/Tractor__c/fields/Jcb__c.field-meta.xml
<CustomField>
    <fullName>Jcb__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jcb</label>
    <referenceTo>Jcb__c</referenceTo>
    <relationshipLabel>Tractors</relationshipLabel>
    <relationshipName>Tractors</relationshipName>
    <type>Lookup</type>
</CustomField>