force-app/main/default/objects/Tractor__c/fields/Tractor_Brand__c.field-meta.xml
<CustomField>
    <fullName>Tractor_Brand__c</fullName>
    <label>Tractor Brand</label>
    <length>18</length>
    <type>Text</type>
</CustomField>