force-app/main/default/objects/Tractor__c/fields/Tractor_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tractor_Total_Cost__c</fullName>
    <label>Tractor Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>